# smartmet-workstation

./: .gitignore  CMakeLists.txt  README.md
libs/fmi/bitmaphandler/: CMakeLists.txt
libs/fmi/datautilities/: CMakeLists.txt
libs/fmi/webclient/: CMakeLists.txt
libs/fmi/wmssupport/: CMakeLists.txt
modules/calculator/: .gitignore  .gitrepo  CMakeLists.txt  Makefile  README.md  smartmet-library-calculator.spec
modules/calculator/calculator/: Acceptor.cpp  Acceptor.h  AnalysisSources.cpp  AnalysisSources.h  Calculator.cpp  Calculator.h  CalculatorFactory.cpp  CalculatorFactory.h  ChangeCalculator.cpp  ChangeCalculator.h  Config.cpp  Config.h  CountCalculator.cpp  CountCalculator.h  DefaultAcceptor.cpp  DefaultAcceptor.h  FunctionAnalyzer.h  GridForecaster.cpp  GridForecaster.h  HourPeriodGenerator.cpp  HourPeriodGenerator.h  IdGenerator.cpp  IdGenerator.h  IntervalPeriodGenerator.cpp  IntervalPeriodGenerator.h  LatestWeatherSource.cpp  LatestWeatherSource.h  ListedPeriodGenerator.cpp  ListedPeriodGenerator.h  LocationSource.cpp  LocationSource.h  MaskSource.cpp  MaskSource.h  MathTools.cpp  MathTools.h  MaximumCalculator.cpp  MaximumCalculator.h  MeanCalculator.cpp  MeanCalculator.h  MedianCalculator.cpp  (+84 more)
modules/cppback/cppback/: CMakeLists.txt  background-manager.cpp  background-manager.h  loop-signal-checker.h
modules/imagine/: CMakeLists.txt
modules/imagine/imagine/: NFmiAffine.h  NFmiColorTools.h  NFmiContourTree.h  NFmiCounter.h  NFmiDrawable.h  NFmiEdge.h  NFmiEdgeTree.h  NFmiEsriAttribute.h  NFmiEsriAttributeName.h  NFmiEsriBox.h  NFmiEsriElement.h  NFmiEsriMultiPatch.h  NFmiEsriMultiPoint.h  NFmiEsriMultiPointM.h  NFmiEsriMultiPointZ.h  NFmiEsriNull.h  NFmiEsriPoint.h  NFmiEsriPointM.h  NFmiEsriPointZ.h  NFmiEsriPolyLine.h  NFmiEsriPolyLineM.h  NFmiEsriPolyLineZ.h  NFmiEsriPolygon.h  NFmiEsriPolygonM.h  NFmiEsriPolygonZ.h  NFmiEsriProjector.h  NFmiEsriShape.h  NFmiFillMap.h  NFmiGeoShape.h  NFmiImage.h  NFmiNearTree.h  NFmiPath.cpp  NFmiSimplifier.h
modules/newbase/: CMakeLists.txt
modules/newbase/newbase/: NFmiAngle.h  NFmiArea.h  NFmiAreaFactory.cpp  NFmiAreaMask.cpp  NFmiAreaMask.h  NFmiAreaMaskHelperStructures.cpp  NFmiAreaMaskHelperStructures.h  NFmiAreaMaskImpl.cpp  (+107 more)
modules/textgen/: .cvsignore  .gitignore  .gitrepo  CMakeLists.txt  Makefile  README.md  smartmet-library-textgen.spec
src/SmartMet/: ApplicationInterfaceForSmartMet.cpp  ApplicationInterfaceForSmartMet.h  CMakeLists.txt  ClassView.cpp  ClassView.h  FileView.cpp  FileView.h  FmiMyCommandLineInfo.cpp  FmiMyCommandLineInfo.h  MainFrm.cpp  MainFrm.h  OutputWnd.cpp  OutputWnd.h  PropertiesWnd.cpp  PropertiesWnd.h  ReadMe.txt  SmartMet.cpp  SmartMet.h  SmartMet.idl  SmartMet.rc  SmartMet.reg  SmartMetDoc.cpp  SmartMetDoc.h  SmartMetView.cpp  SmartMetView.h  SplashThreadHolder.cpp  SplashThreadHolder.h  ViewTree.cpp  ViewTree.h  resource.h  stdafx.h
src/applicationdatabase/: CMakeLists.txt  NFmiApplicationDataBase.cpp  NFmiApplicationDataBase.h  md5.cpp  md5.h  stdafx.cpp  stdafx.h
src/atlutils/: CMakeLists.txt  NTray.cpp  NTray.h  ReadMe.txt  SmartMetAtlUtils.cpp  SmartMetAtlUtils.h  SmartMetAtlUtils.idl  SmartMetAtlUtils.rc  SmartMetAtlUtils.rgs  SmartMetAtlUtils_dllbuild.h  SmartMetAtlUtils_resource.h  stdafx.cpp  stdafx.h  targetver.h
src/bzip2util/: CMakeLists.txt  bzip2util.cpp  bzip2util.h
src/casestudyexe/: CMakeLists.txt  CaseStudyExe.cpp  CaseStudyExe.h  CaseStudyExe.rc  CaseStudyExeDlg.cpp  CaseStudyExeDlg.h  ReadMe.txt  resource.h  stdafx.cpp  stdafx.h
src/dialogs/: CFmiVisualizationSettings.cpp  CFmiVisualizationSettings.h  CMakeLists.txt  CloseDlg.cpp  CloseDlg.h  FmiBetaProductAutomationDialog.cpp  FmiBetaProductAutomationDialog.h  FmiBetaProductDialog.cpp  FmiBetaProductDialog.h  FmiBetaProductTabControlDialog.cpp  FmiBetaProductTabControlDialog.h  FmiBrushToolDlg.cpp  FmiBrushToolDlg.h  FmiCaseStudyDlg.cpp  FmiCaseStudyDlg.h  FmiCountryFilterDlg.cpp  FmiCountryFilterDlg.h  FmiDataValidationDlg.cpp  FmiDataValidationDlg.h  FmiGriddingOptionsDlg.cpp  FmiGriddingOptionsDlg.h  FmiHelpEditorSettingsDlg.cpp  FmiHelpEditorSettingsDlg.h  FmiIgnoreStationsDlg.cpp  FmiIgnoreStationsDlg.h  FmiInputValueDlg.cpp  FmiInputValueDlg.h  FmiLanguageSelectionDlg.cpp  FmiLanguageSelectionDlg.h  FmiLoadDataDialog.cpp  FmiLoadDataDialog.h  FmiLocationFinderDlg.cpp  FmiLocationFinderDlg.h  FmiLocationSelectionToolDlg2.cpp  FmiLocationSelectionToolDlg2.h  FmiMacroParamDataGeneratorDlg.cpp  FmiMacroParamDataGeneratorDlg.h  FmiMacroPathSettings.cpp  FmiMacroPathSettings.h  FmiMaskOperationDlg.cpp  (+37 more)
src/mfcutils/: ACListWnd.cpp  CMakeLists.txt  CMemDC.h  CeXDib.h  CheckComboBox.cpp  CheckComboBox.h  CloneBitmap.cpp  CloneBitmap.h  ControlSplitter.cpp  ControlSplitter.h  ControlsEx.h  DataLoadingProblemsDlg.cpp  DataLoadingProblemsDlg.h  DialogEx.cpp  DialogEx.h  DynamicSplitterHelper.cpp  DynamicSplitterHelper.h  EkResource.h  ExtStatusControlBar.cpp  ExtStatusControlBar.h  FmiDataLoadingWarningDlg.cpp  FmiDataLoadingWarningDlg.h  FmiDropFileWarningDlg.cpp  FmiDropFileWarningDlg.h  FmiRichEditDlg.cpp  FmiRichEditDlg.h  FmiWin32DirectoryUtils.cpp  FmiWin32DirectoryUtils.h  FolderDlg.h  GUSIconEdit.cpp  MultiMonitor.h  PPDrawManager.h  PPHtmlDrawer.cpp  PPHtmlDrawer.h  PPTooltip.cpp  PPTooltip.h  PropPageFrameDefault.cpp  ReadMe.txt  SmartMetMfcUtils.rc  SmartMetMfcUtils_resource.h  (+20 more)
src/processes/: CMakeLists.txt  MakeOptionalExePath.cpp  MakeOptionalExePath.h  execute-command-in-separate-process.cpp  execute-command-in-separate-process.h
src/processpool/: CMakeLists.txt
test/: CMakeLists.txt
test/datautilities/: Data.h  DataUtilitiesSingletonMock.h  DataUtilitiesTest.cpp  FakeDataCreator.h  GridMock.h  GridUtilTest.cpp  InterpolatedDataCacheTest.cpp  PointsUtilTest.cpp  ReferenceAreaCreator.h  RootDataCacheTest.cpp  TestHelper.cpp  TestHelper.h
test/wmssupport/: AssertionMacrosTest.cpp  BaseQueryTest.cpp  BitmapParserTest.cpp  ClientMock.h  CmakeLists.txt  GetCapabilitiesTest.cpp  GetMapTest.cpp  MainWmsSupportTest.cpp  QueryCacheTest.cpp  TestHelper.h  WmsServerTalkerTest.cpp  stdafx.h
(+1897 files in other folders)
